@@ -3,6 +3,8 @@
  * pmkcfg.sh now have a check for strlcat.
  * fully included strlcat in compat.
  * added da_pop() in dynarray and updated relative test.
+ * use INC_PATH in pmk_check_include().
+ * use LIB_PATH in pmk_check_lib().
 
 28 May 2003 mipsator
  * misc changes in Makefile.
